# matsuzawa-20260312

./: pyproject.toml
.github/scripts/: cloud-gpu-runner.sh
.research/: research_history.json
.research/results/: stderr.txt  stdout.txt
.research/results/comparison/: status.json
config/: config.yaml
config/run/: ablation-1-quality-only-4shot.yaml  ablation-2-quality-only-8shot.yaml  ablation-3-no-schema-4shot.yaml  ablation-4-no-structure-4shot.yaml  ablation-5-no-brevity-4shot.yaml  comparative-0-gpt35turbo-gsm8k.yaml  comparative-1-autocot-4shot.yaml  comparative-2-autocot-8shot.yaml  proposed-gpt35turbo-gsm8k.yaml  proposed-sot-4shot.yaml  proposed-sot-8shot.yaml
src/: evaluate.py  inference.py  main.py  model.py  preprocess.py  train.py
