[project]
name = "sot-prompt-experiment"
version = "0.1.0"
description = "Schema-of-Thought Prompting experiment comparing CoT methods"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.0",
    "wandb>=0.16.0",
    "openai>=1.0.0",
    "datasets>=2.14.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [VALIDATOR FIX - Attempt 1]
# [PROBLEM]: Build failed with "ValueError: Unable to determine which files to ship inside the wheel"
# [CAUSE]: hatchling couldn't find a directory matching the project name (sot_prompt_experiment) and no packages were explicitly specified
# [FIX]: Added [tool.hatch.build.targets.wheel] section to explicitly specify that the src directory should be packaged
#
# [OLD CODE]:
# (no wheel configuration existed)
#
# [NEW CODE]:
[tool.hatch.build.targets.wheel]
packages = ["src"]
