[project]
name = "sot-prompt-experiment"
version = "0.1.0"
description = "Schema-of-Thought Prompting experiment on GSM8K"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "wandb>=0.16.0",
    "datasets>=2.16.0",
    "google-generativeai>=0.3.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
